#
AM_CFLAGS = -Wall

#
bin_PROGRAMS = bugz
bugz_SOURCES = bugz.h \
               bugz.c \
               bugz_cmd.h \
               bugz_auth.c \
               bugz_utils.c \
               bugz_search.c \
               bugz_modify.c \
               bugz_post.c \
               bugz_attach.c \
               bugz_history.c \
               bugz_component.c \
               bugz_get.c

